# tauri-vue-template

./: .env.development  .gitignore  README.md  package.json  vue.config.js
biz-module/: Cargo.toml
biz-module/src/: lib.rs  model.rs
src/: App.vue  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: controller.rs  main.rs
src/apis/: home.js
src/backendApis/: home.js
src/components/TopNavbar/: index.vue
src/layout/: index.vue
src/pages/home/: index.vue
src/router/: index.js
src/store/: index.js
src/styles/: base.scss
