[package]
name = "tauri-vue-template"
version = "0.1.0"
description = "tauri vue template"
authors = ["Zhang Guangqun"]
license = ""
repository = ""
default-run = "tauri-vue-template"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0.83"
serde = { version = "1.0.142", features = ["derive"] }
tauri = { version = "1.0.5", features = ["api-all", "windows7-compat"] }
biz-module = { path = "../biz-module" }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
